--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -61,6 +61,8 @@ jobs:
       # Package
       - name: Package
         run: dotnet pack ${{ env.Project_Path }} --no-build --no-restore --configuration Release --output ${{ runner.WORKSPACE }}/nupkgs -p:PackageVersion=${{ steps.bump-semver.outputs.new_version }}
+      
+      # Zip
       - name: Zip Release
         uses: TheDoctor0/zip-release@0.6.2
         with:
@@ -74,15 +76,7 @@ jobs:
       - name: Publish
         if: ${{ env.Enable_Release }}
         run: dotnet nuget push ${{ runner.WORKSPACE }}/nupkgs/*.nupkg --skip-duplicate --source github --api-key ${{ secrets.PACKAGE_TOKEN }}
-
-      - name: Setup NuGet.exe for use with actions
-        if: ${{ env.Enable_Nuget_Release }}
-        uses: NuGet/setup-nuget@v1.0.6
-
-      - name: Publish Nuget
-        if: ${{ env.Enable_Nuget_Release }}
-        run: nuget push ${{ runner.WORKSPACE }}/nupkgs/*.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey ${{ secrets.NUGET_PACKAGE_TOKEN }}
-      
+        
       # Create Release
       - name: Create Release
         id: create_release
@@ -106,3 +100,14 @@ jobs:
           asset_path: ${{ runner.WORKSPACE }}/nupkgs/release.zip
           asset_name: release.zip
           asset_content_type: application/zip
+          
+      # Release to NUGET.ORG
+      - name: Setup NuGet.exe for use with actions
+        if: ${{ env.Enable_Nuget_Release }}
+        uses: NuGet/setup-nuget@v1.0.6
+
+      - name: Publish Nuget
+        if: ${{ env.Enable_Nuget_Release }}
+        run: nuget push ${{ runner.WORKSPACE }}/nupkgs/*.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey ${{ secrets.NUGET_PACKAGE_TOKEN }}
+      
+      
