--- a/HBDStack.Services.FileStorage.Tests/HBDStack.Services.FileStorage.Tests.csproj
+++ b/HBDStack.Services.FileStorage.Tests/HBDStack.Services.FileStorage.Tests.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\HBDStack.Services.FileStorage.AzureAdapters\HBDStack.Services.FileStorage.AzureAdapters.csproj" />
       <ProjectReference Include="..\HBDStack.Services.FileStorage\HBDStack.Services.FileStorage.csproj" />
     </ItemGroup>
 
