--- a/HBD.Services.Email/HBDStack.Services.Email/HBDStack.Services.Email.csproj
+++ b/HBD.Services.Email/HBDStack.Services.Email/HBDStack.Services.Email.csproj
@@ -17,7 +17,7 @@
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <LangVersion>default</LangVersion>
         <Nullable>disable</Nullable>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <PackageIcon>NugetLogo.png</PackageIcon>
         <ImplicitUsings>true</ImplicitUsings>
     </PropertyGroup>
