enhance file service

--- a/HBDStack.Services.FileStorage.Tests/HBDStack.Services.FileStorage.Tests.csproj
+++ b/HBDStack.Services.FileStorage.Tests/HBDStack.Services.FileStorage.Tests.csproj
@@ -35,6 +35,9 @@
       <None Update="appsettings.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="TestData\big_log.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
